# DerkJS-Redux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test262.sh  utility.sh
demos/: fib.js  parser.js  readline.js
docs/: README.md  codegen.md  gc.md  grammar.md  js_reference.md  objects.md  roadmap.md  sema_checks.md
src/: main.cpp  main_tco.cpp
src/derkjs_impl/: derkjs.ixx
src/derkjs_impl/backend/: bc_generate.ixx  expr_gen.ixx  ir.ixx  ir_generate.ixx  stmt_gen.ixx
src/derkjs_impl/core/: driver.ixx  polyfills.ixx
src/derkjs_impl/frontend/: ast.ixx  lexicals.ixx  parse.ixx  semantics.ixx
src/derkjs_impl/meta/: enums.ixx
src/derkjs_impl/runtime/: arrays.ixx  boolean.ixx  builtins.ixx  bytecode.ixx  callables.ixx  context.ixx  errors.ixx  gc.ixx  natives.ixx  number.ixx  object.ixx  objects.ixx  op_handlers.ixx  strings.ixx  value.ixx  vm.ixx
src/derkjs_impl/runtime/intrinsics/: array_natives.ixx  boolean_natives.ixx  conversions.ixx  error_natives.ixx  function_natives.ixx  number_natives.ixx  object_natives.ixx  routines.ixx  string_natives.ixx
src/frontend/: ast.ixx  lexicals.ixx  parse.ixx  semantics.ixx
test_suite/: and_or_vars.js  bad_math.js  comments.js  else_if.js  fib.js  fizzbuzz_count.js  lambda_1.js  methods.js  nested_function.js  object_1.js  simple_loop.js  top_this.js  trivial_function.js  un_undef.js
test_suite/basic/: and_or_vars.js  bad_math.js  comments.js  decrement.js  deletes.js  do_loop.js  else_if.js  fib.js  fizzbuzz_count.js  hoist_var.js  increment.js  lambda_1.js  methods.js  no_change.js  object_1.js  rest_params.js  simple_for.js  simple_loop.js  string_escaped.js  top_this.js  trivial_function.js  typeof_op.js  un_undef.js  vars.js  void_op.js
test_suite/benchmarks/: node_fib.js  py3_fib.py
test_suite/builtins/: arrays_1.js  arrays_2.js  arrays_3.js  arrays_4.js  arrays_5.js  arrays_6.js  arrays_7.js  arrays_8.js  arrays_ctor.js  boolean.js  func_0.js  func_1.js  func_2.js  func_3.js  is_nan.js  num.js  object_1.js  object_api.js  object_api_2.js  object_basic_model.js  object_ctor.js  str_to_nums.js  strings_1.js  strings_2.js  strings_3.js
test_suite/interactives/: banana.js  fizzbuzz.js  hello_world.js  print_stuff.js  readline.js  timed_fizzbuzz.js
test_suite/objects/: Object_1.js  arrays_1.js  arrays_3.js  arrays_ctor.js  capture.js  ctor_and_proto.js  exceptions.js  instanceof.js  object_api.js  object_basic_model.js  object_convert.js  object_ctor.js  primitive_boxing.js  strings_1.js  test_gc.js
test_suite/special/: fib.js  fizzbuzz_count.js  linear_search.js  parser.js  str_to_ints.js
test_suite/stdlib/: polyfill.js
utility/: run_suite.py
